--- a/05-Font/p1.html
+++ b/05-Font/p1.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Font</title>
+    <style>
+        .f1{font-family: sans-serif;} /*no sharp edge */
+        .f2{font-family: serif;} /*no sharp edge */
+        .f3{font-family: monospace;} /*single space between each char */
+        .f4{font-family: cursive;} /*hand written */
+        .f5{font-family: fantasy;}/*condensed*/
+    </style>
 </head>
 <body>
     <center>
